# pacmantaller

./: ProjectHome.md  SVN_ECLIPSE.md  config.ini
client/: .cproject  piso.tga
client/Imagenes/: fantasma.tga  ladri.tga  suelo.tga
client/src/: Bonus.cpp  Bonus.h  Camara.cpp  Camara.h  CasaFantasmas.cpp  CasaFantasmas.h  Cliente.cpp  Cliente.h  Coordenada.cpp  Coordenada.h  Elemento.cpp  Elemento.h  EnviarMensaje.cpp  EnviarMensaje.h  Fantasma.cpp  Fantasma.h  LogResource.cpp  LogResource.h  Main.cpp  Mapa.cpp  Mapa.h  Mensaje.h  Model.h  Modelo.cpp  Modelo.h  Mutex.cpp  PacMan.h  (+19 more)
editor/: .cproject
server/: .cproject  config.ini  mapaTest1.xml
servidor/: .project
source/: AceptarJugador.h  Arco.h  Bonus.cpp  Bonus.h  CasaFantasmas.cpp  CasaFantasmas.h  CerrarServidor.cpp  ComenzarJuego.h  ConnectionManager.cpp  ConnectionManager.h  Dispatcher.cpp  Dispatcher.h  Elemento.h  ElementsManager.h  EscucharJugador.cpp  Grafo.h  Init.cpp  Jugador.cpp  Jugador.h  Key.cpp  Key.h  Main.cpp  Mapa.cpp  Mensaje.cpp  Message.cpp  MessageManager.cpp  Modelo.cpp  Modelo.cpp.mine  Modelo.h  Modelo.h.mine  Modelo.h.r22  Mutex.h  Operacion.cpp  OperacionFactory.cpp  Parser.cpp  Parser.h  Pastilla.cpp  Pool.cpp  Pool.h  Posicion.cpp  (+17 more)
trunk/: .cproject  .project
trunk/editor/src/: Makefile.am  abrir_nivel.cpp  abrir_nivel.h  config.h  cordenada.cpp  cordenada.h  cuadro.h  definiciones_editor.h  editor.cpp  editor.h  editordemundos.cc  grafo.cpp  icono.h  insertar_imag.cpp  main_editor.cpp  main_window.cc  nuevo_nivel.h  tabla.cpp  tabla.h  xml_parser.cpp
wiki/: SVN_ECLIPSE.wiki
(+352 files in other folders)
